# codex-characters

./: .gitignore  README.md
.github/workflows/: desktop-build.yml  desktop-release.yml
apps/desktop/: RELEASE_CHECKLIST.md  RELEASE_NOTES.md  index.html  package-lock.json  package.json
apps/desktop/public/pets/airo/: pet.json
apps/desktop/public/pets/calico/: pet.json
apps/desktop/public/pets/haro/: pet.json
apps/desktop/public/pets/max/: pet.json
apps/desktop/scripts/: check-commercial-readiness.mjs  check-signing-readiness.mjs  measure-macos-resources.sh  package-portable-macos.sh  package-portable-windows.ps1  prepare-release.mjs  smoke-preview.mjs
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
highlearning/: README.md
highlearning/airo/qa/: review.json
highlearning/calico/qa/: review.json
highlearning/haro/qa/: review.json
highlearning/max/qa/: review.json
