[package]
name = "highlearning-pet-reminder"
version = "0.1.0"
description = "Lightweight HighLearning study routine reminders with Codex-compatible pets."
authors = ["techkwon"]
license = ""
repository = "https://github.com/techkwon/codex-characters"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "highlearning_pet_reminder_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
anyhow = "1.0"
battery = "0.7.8"
chrono = "0.4"
image = { version = "0.25", default-features = true }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.30.13"
tauri = { version = "2.11.2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.0"
tempfile = "3.15"
url = "2.5"
zip = "2.2"
